--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,10 +1,4 @@
-Calculator Logic::
-1. Define 'ASCII' type.
-2. Write parser for ASCII to CalcProgram
-3. Write a printer: Integer -> ASCII
-4. Write a calc test for "5 5 + 5 +" -> "15"
-
-Miscellaneous::
+* Test that process port types are valid.
 * Make sure we are consistent about variable sized arguments.
   I think we need to use foo* instead of foo[] because in some cases we need
   multiple variable sized bits in the same struct.
@@ -27,5 +21,4 @@ Miscellaneous::
   - Manually review reported errors for 'e' test cases to make sure the test
     case works and the error reported is correct.
     (any better way to automate this kind of testing?)
-* Start work on a calculator program as a basic test for processes.
 
