--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,3 +1,4 @@
+* ParseActn calls GC_MALLOC in many paths. Should we just do that up front?
 * Test that process port types are valid.
 * Make sure we are consistent about variable sized arguments.
   I think we need to use foo* instead of foo[] because in some cases we need
