Add some CheckActn support for exec, get, put, and link.
It's not at all complete though.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,3 +1,8 @@
+* Test that a link's type is valid.
+* Test that a link action's ports can't shadow ports already in scope.
+* Test that a link can't use the same name for the get and put ports.
+* Test that a proc can't have multiple ports of the same name, with or without
+  the same polarity.
 * Should FblcExecute take a const FblcActn*?
   Should we use const FblcActn* instead of FblcActn* everywhere there?
 * ParseActn calls GC_MALLOC in many paths. Should we just do that up front?
