Use specialized structs instead of union for FblcValue.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,6 +1,7 @@
 * See whether it would be appropriate to change union data types to set of
   struct data types. union makes sense if we will change the tag after
   allocating, otherwise set of struct data types is more memory efficient.
+  For: FblcExpr and FblcActn.
 * Replace libgc with custom memory management.
 
 * Design command line interface to fblc
