Use struct types for FblcActn instead of a big union.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,4 +1,4 @@
-* Change FblcActn union data types to set of struct data types.
+* FblcProc.return_type should not be a pointer.
 * Replace FieldList and ArgList with vector in FblcParser.
 * Replace libgc with custom memory management.
 * Design command line interface to fblc
