Define and use FblcAllocator for parsing.
Currently the allocator does nothing and is not yet used by the tokenizer.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,3 +1,4 @@
+* Use allocator in Tokenizer instead of GC_ALLOC.
 * Replace libgc with custom memory management.
   - By using it as a leak detector until everything is manually tracked.
   - And implementing a reference-count based gc for FblcValues.
