--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,3 +1,6 @@
+* Make FblcNewStructValue and FblcNewUnionValue functions.
+  So that allocation and freeing of values is all in FblcValue.c,
+  not inlined in FblcEvaluator.c
 * Replace libgc with custom memory management.
   - By using it as a leak detector until everything is manually tracked.
   - And implementing a reference-count based gc for FblcValues.
