Started work on a new format for spec tests.
The new tests are described in tcl and organized by spec section number.

--- a/fblc/todo.txt
+++ b/fblc/todo.txt
@@ -1,3 +1,5 @@
+* Replace all of the old tests with the new format.
+* Add missing tests.
 * Test that passing ports on the command line actually works.
 * Make it easier to write tests with expected outputs.
   - See the clockincr test, for example.
