--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
-* Add support for the proc_tests for fblcbe/fblcbi
- - Will require support for reading external port values
-* Test and fix reading/writing a stream of Units
+* Test and fix writing a stream of Units
  - which requires some alignment be done.
+* Convert tictactoe.c to use fblcbe/fblcbi.
+* Remove fblc/ implementation.
 * Try tictactoe on fblcbe/fblcbi for the fun of it.
  - And see how much faster it is to choose a move on an empty board.
    (Set up some infrastructure for benchmarking?)
