--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 * Switch to library-based sharing rather than file based sharing.
- - Add helper functions to tell whether a value is a struct or union and
-   return the number of fields it has.
+ - Finish cleaning up fblcbi/fblc.h.
+   -- starting with Value.
  - Turn fblcbi into -lfblc library + fblcbi main.
  - Reimplement fblc as -lfblc + fblcbe.
  - Remove expect_result_b tests.
