Move BitSource and OutputBitStream entirely to Encoder.c

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Switch to library-based sharing rather than file based sharing.
  - Finish cleaning up fblcbi/fblc.h.
+   -- make Vector and bitstream internal?
  - Turn fblcbi into -lfblc library + fblcbi main.
  - Reimplement fblc as -lfblc + fblcbe.
  - Remove expect_result_b tests.
