--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 * Switch to library-based sharing rather than file based sharing.
- - Finish cleaning up fblcbi/fblc.h.
-   -- make Vector and bitstream internal?
+ - Clean up fblcbi/Evaluator.c
+ - Clean up fblcbi/Main.c
  - Better document that for binary encodings of values, the top level value is
    guarenteed to take at least one bytes, regardless of whether or not it is
    part of a stream.
@@ -11,7 +11,7 @@
  - Implement testfblc on top of -lfblct
  - Replace expect_result and expect_proc_result with fblc-test
 
-* Test and fix writing a stream of Units
+* Test writing a stream of Units
  - which requires some alignment be done.
 
 * Implement fbld front end to fblcbi.
