--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,15 @@
 Cleanup Arc:
+* Think about re-organizing front end to expose better interfaces.
 * Clean up all current fblc code.
   - all non-static functions should have a proper prefix.
   - document comments should be present and up to date.
   - code should be clean.
 
 Space Invaders Arc:
+* Write a test to show current FblcExecute fails if all threads block for
+  input.
+* Change IO for FblcExecute to take a single function
+   io(void* user_data, FblcValue* ports, bool block)
 * Rewrite testfblc as fblc-test in top of fblc library.
 * Implement version of Checker that works on FblcProgram without symbols.
 * Modify fblc-test to exercise {Read,Write}{Program,Value} functions
@@ -24,6 +29,8 @@ Miscellanous:
   - Something with the wrong type, such as Donut(), when Unit() is expected. "mistyped"
 
 * Test that tail recursive functions and procedures don't smash the stack.
+  - And document the performance model which says tail recursive functions
+    should not smash the stack.
 * Test that a link's type is valid.
 * Test that a link action's ports can't shadow ports already in scope.
 * Test that a link can't use the same name for the get and put ports.
@@ -55,6 +62,17 @@ Miscellanous:
 * In Parser have the caller parse the trailing semicolon for expressions
   intstead of the callee? That way we can return the expression right away in
   every branch.
+
+* Document performance model.
+  Specifically that we use strict evaluation to model performance because it
+  is a simple model, which is essential for writing high performance code.
+  Lazy evaluation is not 'performance modular' in the sense that the runtime
+  of a function depends on how its arguments were computed and how its result
+  is going to be used, rather than just the value of arguments. Lazy
+  evaluation has some benefits I'll miss, but not nearly enough to justify
+  loss of a simple, modular performance model. Implementations should focus on
+  improving constant factors, not improving complexity over the performance
+  model.
 
 Future:
 * Implement compiler to C. Idea is translate a function body into a sequence
