--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,14 @@ Cleanup Arc:
 * Remove or clean up the last of the unprefixed functions in fblcs.h
 * Verify all document comments are present and up to date.
 
+Proliferation Arc:
+* Implement fblc debugger of some sort?
+* Fix bugs in boolean arithmetic calculator in fblc.
+
 Space Invaders Arc:
+* Remove dependency on libgc by using malloc instead.
+* Factor out common code for running fblcs from command line: FblcsExec
+  - use it for fblc, fblc-test, and tictactoe
 * Rewrite testfblc as fblc-test in top of fblc library.
 * Implement version of Checker that works on FblcProgram without symbols.
 * Modify fblc-test to exercise {Read,Write}{Program,Value} functions
