--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,6 @@ Proliferation Arc:
 * Fix bugs in boolean arithmetic calculator in fblc.
 
 Space Invaders Arc:
-* Remove dependency on libgc by using malloc instead.
 * Factor out common code for running fblcs from command line: FblcsExec
   - use it for fblc, fblc-test, and tictactoe
 * Rewrite testfblc as fblc-test in top of fblc library.
@@ -23,6 +22,7 @@ Space Invaders Arc:
 * Implement space invaders game in fbld.
 
 Miscellanous:
+* Add test to fblc-test that we don't leak memory in FblcExecute.
 * Use consistent naming in spec tests to distinguish between:
   - Something with the wrong syntax, such as ???. "malformed"
   - Something that cannot be typed, such as x, when x is not defined.  "maltyped"
